--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,5 +1,4 @@
-
-name: CD
+name: Continuous Delivery [CD]
 
 on:
   push:
@@ -18,10 +17,10 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn clean install
 
-  test:
-    needs: [build]
+  package:
+    needs: [ build ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -33,10 +32,10 @@ jobs:
           cache: 'maven'
 
       - name: runner test
-        run: mvn clean install
+        run: mvn -B package --file pom.xml
 
-  package:
-    needs: [test]
+  test:
+    needs: [ package ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -53,7 +52,7 @@ jobs:
           mvn verify
 
   registry:
-    needs: [ package ]
+    needs: [ test ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
