--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -64,7 +64,7 @@ jobs:
           cache: 'maven'
 
       - name: Docker Registry Application
-        run: mvn mvn -B package --file pom.xml
+        run: mvn -B package --file pom.xml
 
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
