--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -DskipTests
 
   package:
     needs: [ build ]
@@ -49,7 +49,7 @@ jobs:
       - name: runner test application
         run: |
           mvn clean install
-          mvn verify
+          mvn test
 
   registry:
     needs: [ test ]
@@ -64,7 +64,9 @@ jobs:
           cache: 'maven'
 
       - name: Docker Registry Application
-        run: mvn -B package --file pom.xml
+        run: |
+          mvn -B package --file pom.xml
+          mvn test
 
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
