--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,9 +32,9 @@ jobs:
           cache: 'maven'
 
       - name: packing application
-        run: mvn -B package --file pom.xml
+        run: mvn -B package --file pom.xml -DskipTests
 
-  test:
+  registry:
     needs: [ package ]
     runs-on: ubuntu-latest
     steps:
@@ -46,27 +46,8 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: runner test application
-        run: |
-          mvn clean install
-          mvn test
-
-  registry:
-    needs: [ test ]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: 'temurin'
-          cache: 'maven'
-
       - name: Docker Registry Application
-        run: |
-          mvn -B package --file pom.xml
-          mvn test
+        run: mvn -B package --file pom.xml -DskipTests
 
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
