--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,11 @@ services:
     volumes:
       - ./.data:/var/lib/postgresql/data
 
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: "email@email.com"
-      PGADMIN_DEFAULT_PASSWORD: "12345"
+  adminer:
+    image: adminer
+    container_name: adminer
     ports:
-      - "15432:80"
+      - "15432:8080"
     depends_on:
       - db
     networks:
