--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.pitest</groupId>
+			<artifactId>pitest-maven</artifactId>
+			<version>1.16.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<version>1.18.3</version>
