--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,7 +17,7 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
-        run: mvn clean install -DskipTests
+        run: mvn clean install -DskipTests -Pdev
 
   package:
     needs: [ build ]
@@ -32,7 +32,7 @@ jobs:
           cache: 'maven'
 
       - name: packing application
-        run: mvn -B package --file pom.xml -DskipTests
+        run: mvn -B package --file pom.xml -DskipTests -Pdev
 
   registry:
     needs: [ package ]
@@ -47,7 +47,7 @@ jobs:
           cache: 'maven'
 
       - name: Docker Registry Application
-        run: mvn -B package --file pom.xml -DskipTests
+        run: mvn -B package --file pom.xml -DskipTests -Pdev
 
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
