--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -59,6 +59,6 @@ jobs:
         run: docker push ${{ secrets.DOCKER_USERNAME }}/poi
 
       - name: Create pull request
-        run: gh pr create -B dev -H master --title 'Pull Request/Merge branch dev into master' --body 'Created automatic Pull Request by Github action.'
+        run: gh pr create -B master -H dev --title 'Pull Request/Merge branch dev into master' --body 'Created automatic Pull Request by Github action.'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_SECRET_KEY }}
