--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Publish Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/poi
 
-      - name: Create pull request
-        run: gh pr create -B master -H dev --title 'Pull Request/Merge branch dev into master' --body 'Created automatic Pull Request by Github action.'
+      - name: Create Pull Request
+        run: gh pr create -B master -H dev --title 'Pull Request/Merge Branch dev into master' --body 'Created automatic Pull Request by Github action.'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_SECRET_KEY }}
