--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -59,7 +59,7 @@ jobs:
         run: docker push ${{ secrets.DOCKER_USERNAME }}/poi
 
       - name: Create Pull Request
-        run: gh pr create -B master -H dev --title 'Pull Request/Merge Branch dev into master' --body 'Pull Request'
+        run: gh pr create -B master -H dev --title 'Pull Request/Merge Branch dev into master' --body '<h1>Pull Request</h1>'
         env:
           GITHUB_TOKEN: ${{ secrets.GH_SECRET_KEY }}
           BODY: >
