--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,8 +34,29 @@ jobs:
       - name: packing application
         run: mvn -B package --file pom.xml -DskipTests -P dev
 
+  hadolint:
+    needs: [ build ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4.1.7
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-version: 17
+          distribution: 'temurin'
+          cache: 'maven'
+
+      - name: "Hadolint Dockerfile"
+        run: |
+          sudo apt-get update -y && sudo apt-get upgrade -y
+          wget -O hadolint https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
+          sudo mv hadolint /usr/local/bin/hadolint -y
+          sudo +x /lusr/local/bin/hadolint -y
+          hadolint --help
+          hadolint Dockerfile
+
   registry:
-    needs: [ package ]
+    needs: [ hadolint ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.7
