--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -49,9 +49,11 @@ jobs:
       - name: "Hadolint Dockerfile"
         run: |
           sudo apt-get update -y && sudo apt-get upgrade -y
-          wget -O hadolint https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
-          sudo mv hadolint /usr/local/bin/hadolint
-          sudo +x /lusr/local/bin/hadolint -y
+          wget https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
+          wget https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64.sha256
+          sha256sum -c hadolint-Linux-x86_64.sha256
+          chmod +x ./hadolint-Linux-x86_64
+          mv hadolint-Linux-x86_64 hadolint
           hadolint --help
           hadolint Dockerfile
 
