feat: add redis cache ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
+      - name: Up Container Redis
+        run: docker run -d --name redis-cache -p 6379:6379 -e REDIS_PASSWORD=my-password -e REDIS_PORT=6379 -e REDIS_DATABASES=16 redis:latest
+
       - name: Package Application App
         run: mvn -B package --file pom.xml -P prod
 
@@ -59,7 +62,7 @@ jobs:
         run: redis-cli ping
 
       - name: Up Container Redis
-        run: docker run -d --name redis -p 6379:6379 -e REDIS_PASSWORD=my-password -e REDIS_PORT=6379 -e REDIS_DATABASES=16 redis:latest
+        run: docker run -d --name redis-cache -p 6379:6379 -e REDIS_PASSWORD=my-password -e REDIS_PORT=6379 -e REDIS_DATABASES=16 redis:latest
 
       - name: Test Application App
         run: mvn test -P prod
