feat: add redis e rabbitmq services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "5432:5432"
     networks:
-      - msnetwork
+      - network
     environment:
       - POSTGRES_DB=poi_db
       - POSTGRES_USER=postgres
@@ -23,7 +23,7 @@ services:
     depends_on:
       - db
     networks:
-      - msnetwork
+      - network
 
   redis:
     image: redis:latest
@@ -40,8 +40,21 @@ services:
     ports:
       - "8081:8081"
     networks:
-      - msnetwork
+      - network
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    restart: always
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - network
+    environment:
+      RABBITMQ_USER: guest
+      RABBITMQ_PASS: guest
 
 networks:
-  msnetwork:
+  network:
     driver: bridge
