--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,6 +12,13 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
 
+#RabbitMQ
+  rabbitmq:
+    username: guest
+    password: guest
+    port: 5672
+    host: localhost
+
 #Redis
   cache:
     type: redis
